--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://sandee2847.github.io/sphere/",
+  "homepage": "https://sandee2847.github.io/",
   "name": "webprac",
   "version": "0.1.0",
   "private": true,
